@@ -52,7 +52,11 @@ dependencies {
 androidx {
     name = "Android Resource Inspection - Annotation Processor"
     type = LibraryType.ANNOTATION_PROCESSOR
-    mavenGroup = LibraryGroups.RESOURCEINSPECTION
     inceptionYear = "2021"
     description = "Annotation processors for Android resource and layout inspection"
+}
+
+tasks.withType(Test).configureEach {
+    // https://github.com/google/compile-testing/issues/222
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
 }
